# katan

./: .gitignore  Makefile  katan.c  meson.build  rules.c  rules.h  tests.c  util.h
